added phaser minified src

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Shell</title>
-    <link rel="stylesheet" type="text/css" href="assets/styles.css" />
-    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
 </head>
 
 <body>
