--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Game Project Shell</title>
     <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
+ 	<script type="text/javascript" src="./js/main.js"></script>
 </head>
 
 <body>
-	<canvas></canvas>
 </body>
 </html>
