added reference to phaser in node_modules for local testing

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Game Project Shell</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
+    <title>Behind Enemy Lines</title>
+    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script> 
+    <script src="./node_modules/phaser/build/phaser.min.js"></script>
  	<script type="text/javascript" src="./js/main.js"></script>
 </head>
-
 <body>
 </body>
 </html>
