--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Behind Enemy Lines</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script> 
-    <script src="./node_modules/phaser/build/phaser.min.js"></script>
- 	<script type="text/javascript" src="./js/main.js"></script>
+    <!--<script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script> -->
+    <!--<script src="node_modules/phaser/build/p2.js"></script>-->
+    <!--<script src="node_modules/phaser/build/pixi.js"></script>-->
+    <script src="node_modules/phaser/build/phaser.min.js"></script>
+    <script src="node_modules/phaser-plugin-isometric/dist/phaser-plugin-isometric.js"></script>
+
+ 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 </body>
