--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <!--<script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script> -->
     <!--<script src="node_modules/phaser/build/p2.js"></script>-->
     <!--<script src="node_modules/phaser/build/pixi.js"></script>-->
+
     <script src="node_modules/phaser/build/phaser.min.js"></script>
-    <script src="node_modules/phaser-plugin-isometric/dist/phaser-plugin-isometric.js"></script>
+
+    <!--<script src="node_modules/phaser-plugin-isometric/dist/phaser-plugin-isometric.js"></script>-->
 
  	<script type="text/javascript" src="js/main.js"></script>
 </head>
