--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Behind Enemy Lines</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
+    <!-- <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script> -->
+    <!-- <script type="text/javascript" src="js/phaser.min.js"></script> -->
     <script src="./node_modules/phaser/build/phaser.min.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 </head>
