--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
         case 'http:':
             {
                 var s = document.createElement('script');
-                s.src = "//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js";
+                s.src = "//cdn.jsdelivr.net/phaser/2.6.2/phaser.js";
                 head.appendChild(s);
             }
         case 'https:':
             {
                 var s = document.createElement('script');
-                s.src = "//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js";
+                s.src = "//cdn.jsdelivr.net/phaser/2.6.2/phaser.js";
                 head.appendChild(s);
             }
             break;
         case 'file:':
             {
                 var s = document.createElement('script');
-                s.src = "./node_modules/phaser/build/phaser.min.js";
+                s.src = "./node_modules/phaser/build/phaser.js";
                 s.async = false;
                 head.appendChild(s);
+                var s2 = document.createElement('script');
+                s2.src = "./node_modules/phaser-plugin-isometric/dist/phaser-plugin-isometric.js";
+                s2.async = false;
+                head.appendChild(s2);
             }
             break;
     }
