organized into states, added pause menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <!--<script src="node_modules/phaser-plugin-isometric/dist/phaser-plugin-isometric.js"></script>-->
 
- 	<script type="text/javascript" src="js/main.js"></script>
+ 	<script type="text/javascript" src="js/boot.js"></script>
+    <script type="text/javascript" src="js/load.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/play.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
 </body>
