added soldiers ability to detect enemies, shoot and die

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/play.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
+
+    <script type="text/javascript" src="js/units/soldier.js"></script>
+    <script type="text/javascript" src="js/units/american.js"></script>
+    <script type="text/javascript" src="js/units/soviet.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
