pathfinder class with partial A* implementation

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Behind Enemy Lines</title>
+
     <script src="node_modules/phaser/build/phaser.js"></script>
     <!--<script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.js"></script>-->
     <!--<script src="node_modules/requirejs/require.js"></script>-->
     <!--<script src="node_modules/easystarjs/bin/easystar-0.3.1.js"></script>-->
     <!--<script src="node_modules/phaser_plugin_pathfinding/bin/phaser_pathfinding-0.2.0.min.js"></script>-->
     <script src="bower_components/pathfinding/pathfinding-browser.js"></script>
+
+    <script src="js/pathfinder.js"></script>
 
     <script type="text/javascript" src="js/load.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
