--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/play.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
-
+    
+    <script type="text/javascript" src="js/body.js"></script>
     <script type="text/javascript" src="js/units/soldier.js"></script>
     <script type="text/javascript" src="js/units/american.js"></script>
     <script type="text/javascript" src="js/units/soviet.js"></script>
