--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Behind Enemy Lines</title>
 
-    <script src="node_modules/phaser/build/phaser.js"></script>
-    <!--<script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.js"></script>-->
+<!--     <script src="node_modules/phaser/build/phaser.js"></script> -->
+    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.js"></script>
     <!--<script src="node_modules/requirejs/require.js"></script>-->
     <!--<script src="node_modules/easystarjs/bin/easystar-0.3.1.js"></script>-->
     <!--<script src="node_modules/phaser_plugin_pathfinding/bin/phaser_pathfinding-0.2.0.min.js"></script>-->
