added game timer text and instructions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <script src="js/lib/phaser.min.js"></script>
     <script src="js/lib/pathfinding-browser.js"></script>
+    <script src="js/lib/timer.min.js"></script>
+    <script src="js/lib/stopwatch.min.js"></script>
 
     <script src="js/pathfinder.js"></script>
 
